--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -39,4 +38,6 @@ models:
   my_new_project:
     # Applies to all files under models/example/
     example:
+      +materialized: table
+    stage_layer:
       +materialized: table
